--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/HomePage.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="/img/HomePage.png" alt="" id="HomePageImage">
 </body>
 </html>
