--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,8 @@
 <body>
     <div class="menu">
         <a href="https://github.com/TristanSimonDev/InfoProjekt-Website-Linux/blob/main/LICENSE" target="_blank">Lizenz</a>
-        <a href="https://github.com/TristanSimonDev/InfoProjekt-Website-Linux" target="_blank">Code</a>
+        <a href="https://github.com/TristanSimonDev/InfoProjekt-Website-Linux" target="_blank">Source Code</a>
         <a href="https://github.com/TristanSimonDev" target="_blank">GitHub Profile</a>
-        <a href="simontristandev@gmail.com" target="_blank">EMail</a>
     </div>
     
     
