--- a/pages/1_Index.html
+++ b/pages/1_Index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/1_HomePage.css">
+    <link rel="icon" href="../img/Icon_Linux.png" type="image/png">
     <title>Projekt-Linux</title>
 
 </head>
