update the whole theme

--- a/pages/1_Index.html
+++ b/pages/1_Index.html
@@ -11,9 +11,12 @@
 
     <script src="../main.js"></script>
 
-    <div class="image-container">
-        <img src="../img/1_HomePage.png" alt="" id="HeaderImage" />
+    <div class="Heading">
         <a href="./2_outline.html"></a>
+    </div>
+
+    <div class="content">
+        <h1><strong>Linux</strong></h1>
     </div>
 
 </body>
