add the main construct

--- a/pages/2_outline.html
+++ b/pages/2_outline.html
@@ -11,5 +11,9 @@
         <a href="./2_outline.html" id="forward"></a>
         <a href="./2_outline.html" id="backwards"></a> 
     </div>
+
+    <div id="main_container">
+        <h1 id="heading_text">Gliederrung</h1>
+    </div>
 </body>
 </html>
