update few pages

--- a/pages/6_distrobutions.html
+++ b/pages/6_distrobutions.html
@@ -11,5 +11,29 @@
         <a href="./2_outline.html" id="forward"></a>
         <a href="./2_outline.html" id="backwards"></a> 
     </div>
+
+    <h1 id="heading_text">Linux Distributionen</h1>
+
+    <h2 id="nd_heading">Eine Linux-Distribution ist ein komplettes Betriebssystem, das den Linux-Kernel mit Softwarepaketen kombiniert.</h2>
+
+    <div id="cluster">
+
+        <img src="../img/6/icon.png" alt="" id="image">
+
+        <section id="beliebte-distributionen">
+            <h2>Beliebte Distributionen</h2>
+            <ul>
+                <li>Ubuntu</li>
+                <li>Debian</li>
+                <li>Fedora</li>
+                <li>Arch Linux</li>
+                <li>Linux Mint</li>
+                <li>Kali Linux</li>
+
+            </ul>
+        </section>
+
+    </div>
+    
 </body>
 </html>
