--- a/pages/7_linuxkernel.html
+++ b/pages/7_linuxkernel.html
@@ -11,5 +11,26 @@
         <a href="./2_outline.html" id="forward"></a>
         <a href="./2_outline.html" id="backwards"></a> 
     </div>
+
+    <h1 id="heading_text">Linux Kernel</h1>
+
+    <div id="main">
+
+        <img src="../img/7/linux-kernel.png" alt="">
+        <section id="section">
+            <ul>
+                <li>Unterstützt zahlreiche Architekturen wie x86, ARM, PowerPC, RISC-V, und MIPS, wodurch er auf PCs und Servern läuft</li>
+                <li>unterstützt Loadable Kernel Modules</li>
+                <li>effizientes Speicherverwaltungssystem, das Paging und virtuelle Speicheradressen verwendet, um den verfügbaren RAM optimal zu nutzen</li>
+                <li>Unterstützt zahlreiche Dateisysteme wie ext4, XFS, Btrfs, FAT32, NTFS</li>
+                <li>Protokollunterstützung (z. B. TCP/IP, UDP), was ihn ideal für Server-Anwendungen macht</li>
+            </ul>
+        </section>
+
+    </div>
+
+   
 </body>
+
+
 </html>
