--- a/pages/10_sources.html
+++ b/pages/10_sources.html
@@ -3,13 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Linux</title>
+    <title>Sources</title>
     <link rel="stylesheet" href="../styles/10_sources.css">
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./1_Index.html" id="forward"></a>
+        <a href="./8_conclusion-oppinion.html" id="backwards"></a> 
     </div>
+
+    <h1 id="heading_text">Quellen</h1>
+
+    <section>
+        <li id="list">
+            <ul>https://de.wikipedia.org/wiki/Linux</ul>
+            <ul>https://de.wikipedia.org/wiki/Linus_Torvalds</ul>
+            <ul>https://en.wikipedia.org/wiki/Computer_architecture</ul>
+            <ul>https://de.wikipedia.org/wiki/Linux_(Kernel)</ul>
+            <ul>https://de.wikipedia.org/wiki/Liste_von_Linux-Distributionen</ul>
+            <ul>https://en.wikipedia.org/wiki/Criticism_of_Linux</ul>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+            <ul></ul>
+        </li>
+    </section>
 </body>
 </html>
