--- a/pages/1_Index.html
+++ b/pages/1_Index.html
@@ -11,7 +11,7 @@
 
     <div id="container">
         <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./10_sources.html" id="backwards"></a> 
     </div>
 
     
