--- a/pages/3_whatislinux.html
+++ b/pages/3_whatislinux.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
+        <a href="./4_whoinventedlinux.html" id="forward"></a>
         <a href="./2_outline.html" id="backwards"></a> 
     </div>
     
