--- a/pages/4_whoinventedlinux.html
+++ b/pages/4_whoinventedlinux.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Linux</title>
+    <title>Who invented Linux</title>
     <link rel="stylesheet" href="../styles/4_whoinventedlinux.css">
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./5_prosandconsoflinux.html" id="forward"></a>
+        <a href="./3_whatislinux.html" id="backwards"></a> 
     </div>
 
 
