--- a/pages/6_distrobutions.html
+++ b/pages/6_distrobutions.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Linux</title>
+    <title>distros</title>
     <link rel="stylesheet" href="../styles/6_distrobutions.css">
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./7_linuxkernel.html" id="forward"></a>
+        <a href="./5_prosandconsoflinux.html" id="backwards"></a> 
     </div>
 
     <h1 id="heading_text">Linux Distributionen</h1>
