--- a/pages/7_linuxkernel.html
+++ b/pages/7_linuxkernel.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Linux</title>
+    <title>linux_kernel</title>
     <link rel="stylesheet" href="../styles/7_linuxkernel.css">
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./8_conclusion-oppinion.html" id="forward"></a>
+        <a href="./6_distrobutions.html" id="backwards"></a> 
     </div>
 
     <h1 id="heading_text">Linux Kernel</h1>
