--- a/pages/2_outline.html
+++ b/pages/2_outline.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./3_whatislinux.html" id="forward"></a>
+        <a href="./1_Index.html" id="backwards"></a> 
     </div>
 
     <header>
