--- a/pages/5_prosandconsoflinux.html
+++ b/pages/5_prosandconsoflinux.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./6_distrobutions.html" id="forward"></a>
+        <a href="./4_whoinventedlinux.html" id="backwards"></a> 
     </div>
 
 
