--- a/pages/8_conclusion-oppinion.html
+++ b/pages/8_conclusion-oppinion.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is Linux</title>
-    <link rel="stylesheet" href="../styles/8_conclusion.css">
+    <title>conclusion-oppinion</title>
+    <link rel="stylesheet" href="../styles/8_conclusion-oppinion.css">
 </head>
 <body>
     <div id="container">
-        <a href="./2_outline.html" id="forward"></a>
-        <a href="./2_outline.html" id="backwards"></a> 
+        <a href="./10_sources.html" id="forward"></a>
+        <a href="./7_linuxkernel.html" id="backwards"></a> 
     </div>
+
+    <h1 id="heading_text">Fazit-Meinung</h1>
 </body>
 </html>
