--- a/pages/8_conclusion-oppinion.html
+++ b/pages/8_conclusion-oppinion.html
@@ -13,5 +13,7 @@
     </div>
 
     <h1 id="heading_text">Fazit-Meinung</h1>
+
+    <img src="../img/Linux-Windows-Mac.png" alt="">
 </body>
 </html>
